# yanfa7

./: .gitignore  README.md  edge_stress.code-workspace  yanfa7.code-workspace
.github/workflows/: build.yml
backend/: .gitignore  README.md  build.bat  build.sh  inno_setup.iss  main.py  pyproject.toml
backend/app_edgeStress/: serializers.py  urls.py  views.py
backend/app_edgeStress/module/: cache.py  dataset.py  processor.py  reporter.py
backend/app_pmax/: serializers.py  urls.py  views.py
backend/app_pmax/module/: calculator.py  chart.py
backend/common/: constants.py
frontend/: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.web.json
frontend/.cursor/rules/: Electron-IPC规范.mdc  Electron-Vite规范.mdc  Pmax时间占比.mdc  Vue组件规范.mdc  electron-ipc.mdc  electron-vite-conventions.mdc  project-overview.mdc  project-plan.mdc  vue-conventions.mdc  边缘应力.mdc  项目概述.mdc  首页.mdc
frontend/src/main/: index.ts
frontend/src/preload/: index.d.ts  index.ts  preview.ts
frontend/src/renderer/: index.html  preview.html
frontend/src/renderer/src/: App.vue  main.ts  preview.ts
frontend/src/renderer/src/api/: edgeStress.ts  pmax.ts
frontend/src/renderer/src/assets/: main.css
frontend/src/renderer/src/components/: CommandPalette.vue  FilePreviewDialog.vue  FileResultPopover.vue  SideNav.vue
frontend/src/renderer/src/composables/: usePlotlyDrag.ts
frontend/src/renderer/src/constants/: language.ts
frontend/src/renderer/src/router/: index.ts
frontend/src/renderer/src/stores/: edgeStress.ts
(+6 files in other folders)
