[project]
name = "simpleload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "auto-py-to-exe>=2.48.1",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.133.0",
    "gl-py2pyd>=0.3.2",
    "html5lib>=1.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyinstaller>=6.19.0",
    "scipy>=1.16.3",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
